[tool.poetry]
name = "middle-python"
version = "0.1.0"
description = ""
authors = ["leehjhjhj <tsukiakarii@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.4.4"
pendulum = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
